INTEGRATE_USER_APP: Improve code and fix some issue
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -16,7 +16,8 @@
             android:id="@+id/top_toolbar_history"
             style="@style/Theme.TailorMade.Toolbar.Back"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+            android:layout_height="?attr/actionBarSize"
+            app:title="@string/history_label" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
