INTEGRATE_USER_APP: Fix wrong attach in adapter, add mock response for dashboard
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/values-night/themes.xml
+++ b/libraries/tailormade_dls/src/main/res/values-night/themes.xml
@@ -9,7 +9,7 @@
         <item name="colorAccent">@color/color_primary_600</item>
 
         <item name="android:colorBackground">@color/color_black</item>
-        <item name="colorSurface">@color/color_black</item>
+        <item name="colorSurface">@color/color_black_93</item>
         <item name="colorSurface2">@color/color_black</item>
         <item name="colorError">@color/color_red_400</item>
 
