INTEGRATE_USER_APP: Fix logic for list response in viewmodel, add mock response for order, fix search view
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_search/src/main/res/layout/activity_search.xml
+++ b/features/tailormade_search/src/main/res/layout/activity_search.xml
@@ -16,14 +16,15 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/top_toolbar_search"
+            style="@style/Theme.TailorMade.Toolbar.Back"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize">
 
-            <androidx.appcompat.widget.SearchView
+            <SearchView
                 android:id="@+id/view_search_field"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:iconifiedByDefault="false" />
+                android:searchIcon="@null" />
 
         </com.google.android.material.appbar.MaterialToolbar>
     </com.google.android.material.appbar.AppBarLayout>
