--- a/app/src/main/res/layout/layout_dashboard_tailor.xml
+++ b/app/src/main/res/layout/layout_dashboard_tailor.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
     app:cardElevation="@dimen/dp_4"
     app:cardCornerRadius="@dimen/dp_16">
 
