TAILOR_ORDERS: Add card elevation
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/layout/layout_payment_detail_card.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_payment_detail_card.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="@dimen/dp_4"
+    app:cardElevation="@dimen/dp_4"
     app:shapeAppearanceOverlay="@style/Theme.TailorMade.CornerRounded_16dp">
 
     <LinearLayout
