--- a/libraries/tailormade_dls/src/main/res/layout/layout_spin_button_number.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_spin_button_number.xml
@@ -9,12 +9,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/spin_button_number_reduce"
-            style="?attr/materialButtonOutlinedStyle"
+            style="@style/Theme.TailorMade.Button.Outlined.Rounded.Left"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@drawable/drawable_spin_number_button_left_background"
             android:text="@string/spin_number_reduce_label" />
 
         <Button
@@ -27,10 +26,9 @@
 
         <Button
             android:id="@+id/spin_button_number_add"
-            style="?attr/materialButtonOutlinedStyle"
+            style="@style/Theme.TailorMade.Button.Outlined.Rounded.Right"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@drawable/drawable_spin_number_button_right_background"
             android:text="@string/spin_number_add_label" />
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
