INTEGRATE_USER_APP: Fix some ui bugs
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/res/layout/layout_cart_item.xml
+++ b/app/src/main/res/layout/layout_cart_item.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/dp_16"
-    android:elevation="@dimen/dp_4">
+    android:layout_margin="@dimen/dp_1"
+    android:clickable="true"
+    android:focusable="true"
+    app:cardElevation="@dimen/dp_4">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -127,10 +129,12 @@
 
         <ImageButton
             android:id="@+id/button_delete_order"
-            style="@style/Theme.TailorMade.CornerRounded.All"
             android:layout_width="@dimen/dp_40"
             android:layout_height="@dimen/dp_40"
+            android:layout_marginStart="@dimen/dp_8"
+            android:backgroundTint="?attr/colorControlNormal"
             android:src="@drawable/ic_delete"
+            android:tint="?attr/colorSurface"
             app:layout_constraintBottom_toBottomOf="@id/spin_button_number"
             app:layout_constraintStart_toEndOf="@id/spin_button_number"
             app:layout_constraintTop_toTopOf="@id/spin_button_number"
