--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -9,15 +9,15 @@
 
     <include
         android:id="@+id/layout_design_detail"
-        layout="@layout/layout_cart_item"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        layout="@layout/layout_cart_item" />
 
     <Button
         android:id="@+id/button_checkout_edit_measurement"
         style="@style/Theme.TailorMade.Button.Outlined.Rounded"
         android:layout_width="match_parent"
-        android:layout_marginHorizontal="@dimen/dp_16"
+        android:layout_marginTop="@dimen/dp_16"
         android:drawableEnd="@drawable/ic_edit"
         android:text="@string/edit_measurement_label" />
 
@@ -26,7 +26,6 @@
         style="@style/TextAppearance.TailorMade.Body2.BlackHigh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_12"
         android:layout_marginBottom="@dimen/dp_4"
         android:text="@string/special_instructions_label" />
@@ -36,7 +35,6 @@
         style="@style/Theme.TailorMade.TextInputEditText.Outlined.Rounded"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/dp_16"
         android:layout_marginBottom="@dimen/dp_8"
         android:labelFor="@id/text_view_special_instruction_label">
 
@@ -44,13 +42,13 @@
             android:id="@+id/edit_text_special_instruction"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minLines="5" />
+            android:maxLines="5" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp_16"
+        android:layout_marginVertical="@dimen/dp_16"
         android:elevation="@dimen/dp_4"
         app:shapeAppearanceOverlay="@style/Theme.TailorMade.CornerRounded_16dp">
 
@@ -62,9 +60,9 @@
 
             <include
                 android:id="@+id/layout_checkout_total"
-                layout="@layout/layout_ordered_total"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                layout="@layout/layout_ordered_total" />
 
             <View
                 android:id="@+id/view_checkout_separator"
@@ -102,7 +100,6 @@
         android:id="@+id/button_checkout_make_order"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_8"
         android:text="@string/make_order_label" />
 </LinearLayout>
