--- a/libraries/tailormade_dls/src/main/res/layout/layout_spin_button_number.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_spin_button_number.xml
@@ -13,22 +13,24 @@
             android:id="@+id/spin_button_number_reduce"
             style="@style/Theme.TailorMade.Button.Outlined.Rounded.Left"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/dp_40"
             android:text="@string/spin_number_reduce_label" />
 
         <Button
             android:id="@+id/spin_number_value"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/dp_40"
             android:enabled="false"
+            android:minWidth="@dimen/dp_0"
+            android:paddingHorizontal="@dimen/dp_16"
             android:text="@string/spin_number_value_label" />
 
         <Button
             android:id="@+id/spin_button_number_add"
             style="@style/Theme.TailorMade.Button.Outlined.Rounded.Right"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/dp_40"
             android:text="@string/spin_number_add_label" />
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
