--- a/app/src/main/res/layout/fragment_thanks_for_order.xml
+++ b/app/src/main/res/layout/fragment_thanks_for_order.xml
@@ -1,92 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/dp_16"
-    android:orientation="vertical"
-    tools:context=".feature.checkout.view.ThanksForOrderFragment">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/dp_16">
 
-    <ImageView
-        android:id="@+id/image_view_thank_you"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/illustration_thank_you"
-        tools:ignore="ContentDescription" />
+        android:layout_margin="@dimen/dp_16"
+        android:orientation="vertical"
+        tools:context=".feature.checkout.view.ThanksForOrderFragment">
 
-    <TextView
-        style="@style/TextAppearance.TailorMade.Headline3.BlackHigh.Bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_32"
-        android:text="@string/thank_you_for_order_label"
-        android:textAlignment="center" />
+        <ImageView
+            android:id="@+id/image_view_thank_you"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/illustration_thank_you"
+            tools:ignore="ContentDescription" />
 
-    <TextView
-        style="@style/TextAppearance.TailorMade.Body1.BlackMedium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_8"
-        android:text="@string/thank_you_for_order_content_label"
-        android:textAlignment="center" />
+        <TextView
+            style="@style/TextAppearance.TailorMade.Headline3.BlackHigh.Bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_32"
+            android:text="@string/thank_you_for_order_label"
+            android:textAlignment="center" />
 
-    <TextView
-        style="@style/TextAppearance.TailorMade.Subtitle2.BlackMedium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
-        android:text="@string/payment_total_label"
-        android:textAlignment="center" />
+        <TextView
+            style="@style/TextAppearance.TailorMade.Body1.BlackMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_8"
+            android:text="@string/thank_you_for_order_content_label"
+            android:textAlignment="center" />
 
-    <TextView
-        android:id="@+id/text_view_thank_you_payment_total"
-        style="@style/TextAppearance.TailorMade.Headline3.Primary.Bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        tools:text="@string/payment_total_label" />
+        <TextView
+            style="@style/TextAppearance.TailorMade.Subtitle2.BlackMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
+            android:text="@string/payment_total_label"
+            android:textAlignment="center" />
 
-    <TextView
-        style="@style/TextAppearance.TailorMade.Subtitle2.BlackMedium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
-        android:text="@string/total_discount_got_label"
-        android:textAlignment="center" />
+        <TextView
+            android:id="@+id/text_view_thank_you_payment_total"
+            style="@style/TextAppearance.TailorMade.Headline3.Primary.Bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            tools:text="@string/payment_total_label" />
 
-    <TextView
-        android:id="@+id/text_view_thank_you_total_discount"
-        style="@style/TextAppearance.TailorMade.Headline3.PrimaryDark.Bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        tools:text="@string/total_discount_got_label" />
+        <TextView
+            style="@style/TextAppearance.TailorMade.Subtitle2.BlackMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
+            android:text="@string/total_discount_got_label"
+            android:textAlignment="center" />
 
-    <Button
-        android:id="@+id/button_thank_you_go_to_history"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
-        android:text="@string/show_order_history_label" />
+        <TextView
+            android:id="@+id/text_view_thank_you_total_discount"
+            style="@style/TextAppearance.TailorMade.Headline3.PrimaryDark.Bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            tools:text="@string/total_discount_got_label" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_1"
-        android:layout_marginTop="@dimen/dp_20"
-        android:background="@color/color_grey_F1F1F1" />
+        <Button
+            android:id="@+id/button_thank_you_go_to_history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
+            android:text="@string/show_order_history_label" />
 
-    <TextView
-        style="@style/TextAppearance.TailorMade.Subtitle1.BlackHigh"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
-        android:text="@string/design_you_ordered_label" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"
+            android:layout_marginTop="@dimen/dp_20"
+            android:background="@color/color_grey_F1F1F1" />
 
-    <include
-        android:id="@+id/layout_design_detail"
-        layout="@layout/layout_cart_item"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_16" />
+        <TextView
+            style="@style/TextAppearance.TailorMade.Subtitle1.BlackHigh"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
+            android:text="@string/design_you_ordered_label" />
 
-</LinearLayout>
+        <include
+            android:id="@+id/layout_design_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_16"
+            layout="@layout/layout_cart_item" />
+
+    </LinearLayout>
+</ScrollView>
