--- a/features/tailormade_profile/src/main/res/layout/fragment_profile.xml
+++ b/features/tailormade_profile/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,14 +10,28 @@
 
     <include
         android:id="@+id/layout_card_profile"
-        layout="@layout/layout_card_profile_with_edit"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        layout="@layout/layout_card_profile_with_edit" />
 
     <FrameLayout
         android:id="@+id/frame_layout_profile_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="?colorSurface" />
+        android:backgroundTint="?colorSurface"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout_profile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabMode="fixed" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager_profile"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?attr/colorSurface" />
 
 </LinearLayout>
