--- a/features/tailormade_profile/src/main/res/layout/fragment_profile_about.xml
+++ b/features/tailormade_profile/src/main/res/layout/fragment_profile_about.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/dp_16"
+    android:background="?attr/colorSurface"
+    android:padding="@dimen/dp_16"
     tools:context=".feature.profile.view.ProfileAboutFragment">
 
     <TextView
