--- a/features/tailormade_profile/src/main/res/layout/fragment_edit_about.xml
+++ b/features/tailormade_profile/src/main/res/layout/fragment_edit_about.xml
@@ -137,8 +137,8 @@
 
     <Button
         android:id="@+id/button_submit_edit_about_form"
-        style="@style/Theme.TailorMade.Button.Rounded"
         android:layout_width="@dimen/dp_0"
+        android:layout_height="wrap_content"
         android:text="@string/update_profile_label"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
