INTEGRATE_TAILOR_APP: Fix error, dependency, bugs on tailor app and profile app
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/values/styles.xml
+++ b/libraries/tailormade_dls/src/main/res/values/styles.xml
@@ -448,7 +448,7 @@
 
     <style name="Theme.TailorMade.Toolbar.Back" parent="Theme.TailorMade.Toolbar">
         <item name="navigationIcon">@drawable/ic_back</item>
-        <item name="navigationIconColor">?attr/colorControlNormal</item>
+        <item name="navigationIconTint">?attr/colorControlNormal</item>
     </style>
 
     <style name="Theme.TailorMade.ActionMode" parent="Widget.AppCompat.ActionMode">
