--- a/tailor-app/src/main/res/navigation/nav_main_graph.xml
+++ b/tailor-app/src/main/res/navigation/nav_main_graph.xml
@@ -14,6 +14,11 @@
         android:name="com.future.tailormade_chat.feature.view.ChatListFragment"
         android:label="ChatListFragment" />
     <fragment
+        android:id="@+id/orderListFragment"
+        android:name="com.future.tailormade.tailor_app.feature.order.view.OrderListFragment"
+        android:label="fragment_order_list"
+        tools:layout="@layout/fragment_order_list" />
+    <fragment
         android:id="@+id/profileFragment"
         android:name="com.future.tailormade_profile.feature.profile.view.ProfileFragment"
         android:label="ProfileFragment" />
@@ -25,6 +30,12 @@
     <action
         android:id="@+id/action_global_chatListFragment"
         app:destination="@id/chatListFragment"
+        app:popUpTo="@id/chatListFragment"
+        app:popUpToInclusive="true" />
+    <action
+        android:id="@+id/action_global_orderListFragment"
+        app:destination="@id/orderListFragment"
+        app:popUpTo="@id/orderListFragment"
         app:popUpToInclusive="true" />
     <action
         android:id="@+id/action_global_profileFragment"
