INTEGRATE_TAILOR_APP: Fix error on opening fragment, fix bugs and ui bugs, add mock data
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/values/dimens.xml
+++ b/libraries/tailormade_dls/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
     <dimen name="sp_8">8sp</dimen>
 
     <dimen name="dp_600">600dp</dimen>
+    <dimen name="dp_400">400dp</dimen>
     <dimen name="dp_200">200dp</dimen>
     <dimen name="dp_120">120dp</dimen>
     <dimen name="dp_100">100dp</dimen>
@@ -49,4 +50,5 @@
     <dimen name="dp_2">2dp</dimen>
     <dimen name="dp_1">1dp</dimen>
     <dimen name="dp_0">0dp</dimen>
+    <dimen name="dp_180">180dp</dimen>
 </resources>
