--- a/tailor-app/src/main/res/layout/activity_order_detail.xml
+++ b/tailor-app/src/main/res/layout/activity_order_detail.xml
@@ -97,6 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dp_16"
+            android:layout_marginBottom="@dimen/dp_16"
             android:visibility="gone"
             tools:text="@string/special_instructions_label"
             tools:visibility="visible" />
