--- a/tailor-app/src/main/res/layout/layout_card_order_info.xml
+++ b/tailor-app/src/main/res/layout/layout_card_order_info.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="@dimen/dp_4"
+    app:cardElevation="@dimen/dp_4"
     app:cardCornerRadius="@dimen/dp_16">
 
     <LinearLayout
