--- a/features/tailormade_design_detail/src/main/res/navigation/nav_design_detail_graph.xml
+++ b/features/tailormade_design_detail/src/main/res/navigation/nav_design_detail_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_design_detail_graph"
-    app:startDestination="@id/addOrEditDesignFragment">
+    app:startDestination="@id/designDetailFragment">
 
     <fragment
         android:id="@+id/designDetailFragment"
