--- a/tailor-app/src/main/res/layout/layout_card_order_item.xml
+++ b/tailor-app/src/main/res/layout/layout_card_order_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/dp_16"
+    android:layout_margin="@dimen/dp_1"
     android:clickable="true"
     android:elevation="@dimen/dp_4"
     android:focusable="true">
@@ -112,12 +112,13 @@
 
         <include
             android:id="@+id/layout_order_total"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_8"
+            android:layout_marginHorizontal="@dimen/dp_8"
             android:layout_marginTop="@dimen/dp_12"
             layout="@layout/layout_ordered_total"
             app:layout_constraintStart_toEndOf="@id/image_view_ordered"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_view_ordered_price" />
 
         <Button
