--- a/features/tailormade_chat/src/main/res/layout/layout_chat_list_state.xml
+++ b/features/tailormade_chat/src/main/res/layout/layout_chat_list_state.xml
@@ -6,29 +6,31 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/image_view_dashboard_state"
+        android:id="@+id/image_view_chat_list_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/illustration_dashboard"
+        android:src="@drawable/illustration_chat_list"
         tools:ignore="ContentDescription" />
 
     <TextView
-        android:id="@+id/text_view_dashboard_title_state"
+        android:id="@+id/text_view_chat_list_title_state"
         style="@style/TextAppearance.TailorMade.Headline2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_16"
-        android:text="@string/dashboard_title_state"
+        android:gravity="center"
+        android:text="@string/chat_list_title_state"
         android:textAlignment="center" />
 
     <TextView
-        android:id="@+id/text_view_dashboard_description_state"
+        android:id="@+id/text_view_chat_list_description_state"
         style="@style/TextAppearance.TailorMade.Body1.BlackMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_8"
-        android:text="@string/dashboard_description_state"
+        android:gravity="center"
+        android:text="@string/chat_list_description_user_state"
         android:textAlignment="center" />
 
 </LinearLayout>
