--- a/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_general_info.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_general_info.xml
@@ -92,6 +92,7 @@
         android:layout_marginStart="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_4"
         android:text="@string/designed_by_label"
+        app:layout_constraintTop_toBottomOf="@id/text_view_design_detail_price"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
