--- a/features/tailormade_profile/src/main/res/layout/fragment_profile.xml
+++ b/features/tailormade_profile/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,20 +17,7 @@
         android:id="@+id/frame_layout_profile_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="?colorSurface"
-        android:visibility="gone"
-        tools:visibility="visible" />
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout_profile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabMode="fixed" />
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager_profile"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?attr/colorSurface" />
+        android:layout_marginTop="@dimen/dp_16"
+        android:backgroundTint="?colorSurface" />
 
 </LinearLayout>
