--- a/features/tailormade_profile/src/main/res/layout/layout_card_profile_with_edit.xml
+++ b/features/tailormade_profile/src/main/res/layout/layout_card_profile_with_edit.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="?colorSurface"
     android:orientation="vertical">
 
@@ -19,8 +18,6 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dp_16"
         android:layout_marginBottom="@dimen/dp_16"
-        android:text="@string/edit_profile_label"
-        android:visibility="gone"
-        tools:visibility="visible" />
+        android:text="@string/edit_profile_label" />
 
 </LinearLayout>
