INTEGRATE_TAILOR_APP: Add splash screen, fix some navigation bugs, implement mapper
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/res/navigation/nav_checkout_graph.xml
+++ b/app/src/main/res/navigation/nav_checkout_graph.xml
@@ -12,7 +12,9 @@
         tools:layout="@layout/fragment_checkout" >
         <action
             android:id="@+id/action_checkoutFragment_to_thanksForOrderFragment"
-            app:destination="@id/thanksForOrderFragment" />
+            app:destination="@id/thanksForOrderFragment"
+            app:popUpToInclusive="true"
+            app:popUpTo="@id/thanksForOrderFragment" />
     </fragment>
     <fragment
         android:id="@+id/thanksForOrderFragment"
