INTEGRATE_TAILOR_APP: Fix sign up birthdate
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_auth/src/main/res/layout/fragment_sign_up.xml
+++ b/features/tailormade_auth/src/main/res/layout/fragment_sign_up.xml
@@ -67,6 +67,8 @@
         android:id="@+id/text_input_birth_date_sign_up"
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
         android:hint="@string/birth_date_label"
         app:endIconDrawable="@drawable/ic_date"
         app:endIconMode="custom"
