--- a/features/tailormade_design_detail/src/main/res/layout/layout_add_or_edit_image.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/layout_add_or_edit_image.xml
@@ -32,8 +32,9 @@
 
     <ImageView
         android:id="@+id/image_view_preview_design_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dp_100"
+        android:layout_height="@dimen/dp_100"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
